# libresvip-tauri

./: .gitignore  README.md  deploy_windows.sh  libresvip-tauri.nsi  libresvip.proto  libresvip_tauri.spec  pyproject.toml  uv.toml
.github/workflows/: build.yml
frontend/: README.md  buf.gen.yaml  buf.yaml  bunfig.toml  compile_proto.cmd  compile_proto.sh  package.json
frontend/proto/: libresvip_tauri.proto
frontend/src/: AboutPage.tsx  ApiTypes.ts  App.tsx  ConverterPage.tsx  Theme.ts  Utils.tsx  client.ts  frontend.tsx  i18n.ts  index.css  index.html  libresvip.ts  libresvip_tauri_pb.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src-tauri/src/plugins/: mod.rs
frontend/src/assets/: middleware_ids.json  plugin_infos.json
frontend/src/components/: AppMenu.tsx  ErrorDialog.tsx  LyricReplaceRulesPanel.tsx  TaskListPopover.tsx  TitleBarButtons.tsx  WarningDialog.tsx
frontend/src/locales/: en_US.json  zh_CN.json
frontend/src/store/: ConverterStore.ts  SettingStore.ts  WindowStore.ts
libresvip_tauri/: Tauri.toml  __init__.py  __main__.py  libresvip_tauri_connect.py  libresvip_tauri_pb.py  libresvip_tauri_pb2.py  libresvip_tauri_pb2.pyi  server.py  service.py  tauri_grpc.py
libresvip_tauri/capabilities/: default.toml
