[project]
name = "libresvip-tauri"
version = "2.6.2"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "connectrpc>=0.10.1",
    "hypercorn>=0.18.0",
    "libresvip[crypto,lxml,yaml12]>=2.6.2",
    "psutil>=7.2.2",
    "starlette>=1.2.1",
]

[dependency-groups]
nodejs = [
    "nodejs-wheel>=24.16.0",
    "pydantic-to-typescript>=2.0.0",
]
packaging = [
    "pillow>=12.2.0",
    "pyinstaller>=6.20.0",
    "shellingham<2.0.0,>=1.5.4",
    "uv>=0.11.19",
]
protobuf = [
    "buf-bin>=1.70.0",
    "protoc-gen-connectrpc>=0.10.1",
    "protobuf-protoc-bin>=35.0",
]

[tool.uv.build-backend]
module-name = "libresvip_tauri"
module-root = ""

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
