[project]
name = "libresvip-tauri"
version = "2.7.3"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "connectrpc>=0.11.0",
    "hypercorn>=0.18.0",
    "libresvip[crypto,lxml,ujson,yaml12]>=2.7.3",
    "psutil>=7.2.2",
    "starlette>=1.3.1",
]

[dependency-groups]
nodejs = [
    "nodejs-wheel>=24.16.0",
    "pydantic-to-typescript>=2.0.0",
]
packaging = [
    "pillow>=12.3.0",
    "pyinstaller>=6.21.0",
    "shellingham<2.0.0,>=1.5.4",
    "uv>=0.11.27",
]
protobuf = [
    "buf-bin>=1.71.0",
    "protoc-gen-connectrpc>=0.11.0",
    "protoc-gen-py>=0.1.1",
]

[tool.uv.build-backend]
module-name = "libresvip_tauri"
module-root = ""

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
