[package]
name = "libresvip-tauri"
version = "0.1.0"
description = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "libresvip_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = ["compression", "common-controls-v6", "dynamic-acl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-decorum = "1.1.1"
tauri-plugin-prevent-default = { version = "5.0.0", default-features = false, features = ["platform-windows"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2.7"

[features]
default = ["wry"]
wry = ["tauri/wry", "tauri/x11", "tauri/dbus"]
cef = ["tauri/cef"]

[patch.crates-io]
tauri = { git = "https://github.com/tauri-apps/tauri", rev = "f2c75b9071991907b0c79498b0fa654804e3cb24" }
tauri-build = { git = "https://github.com/tauri-apps/tauri", rev = "f2c75b9071991907b0c79498b0fa654804e3cb24" }

[lints.rust]
unused-assignments = "warn"
unused-imports = "warn"
unused-variables = "warn"
dead-code = "warn"
